# Regulation-Compliance

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
config/: regions.yaml
config/prompts/: langgraph_planner.md  langgraph_researcher.md  langgraph_validator.md
src/: __init__.py
src/agents/: __init__.py  base_client.py  claude_client.py  gpt_client.py  langgraph_team.py  tool_executor.py  tool_schemas.py  tools.py
src/crawlers/: __init__.py  base.py  pdf_parser.py  tw_laws.py
src/database/: __init__.py  discoverer.py  manager.py  models.py  seed_data.py  seed_other_industries.py  seed_regulations.py  seed_regulations_full.py  update_industry_applicability.py  verifier.py
src/models/: __init__.py  regulation.py
src/storage/: __init__.py  interfaces.py  local.py
src/ui/: __init__.py  handlers.py  simple_ui.py
src/utils/: __init__.py  cache.py  config.py  conversation.py  export.py  history.py  logging.py
tests/: conftest.py  test_cache.py  test_conversation.py  test_export.py  test_langgraph.py  test_llm_connection.py  test_tool_executor.py  test_tool_schemas.py  test_tools.py
